--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
         <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
 
+        <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
     </head>
 
     <body class="font-juaso">
