--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="icon" href="../public/assets/images/favicon.ico">
 
-        <title><%= htmlWebpackPlugin.options.title %></title>
+        <link rel="shortcut icon" type="image/x-icon" href="https://kyeiandamankwaa.com/juasoonline/resources/assets/images/favicon.png">
+        <link rel="shortcut icon" type="image/png" href="https://kyeiandamankwaa.com/juasoonline/resources/assets/images/favicon.png">
+
+        <title>Juasoonline Merchants</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
         <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
